
***   Support arrayed parameter overrides, bug1153. [John Stevenson]

****  Support modport access to un-modport objects, bug1161. [Todd Strader]

****  Add stack trace when can't optimize function, bug1158. [Todd Strader]

****  Add warning on mis-sized literal, bug1156. [Todd Strader]

****  Fix non-arrayed cells with interface arrays, bug1153. [John Stevenson]


* Verilator 3.902 2017-04-02

**    Add -FI option to force includes,msg2146. [Amir Gonnen]

**    Add --relative-includes. [Rob Stoddard]

***   Add error on duplicate pattern assignments, bug1145. [Johan Bjork]

****  Fix error on improperly widthed default function, bug984. [Todd Strader]

****  Fix 2009 localparam syntax, msg2139. [Galen Seitz]

****  Fix ugly interface-to-non-interface errors, bug1112. [Johan Bjork]

****  Fix LDFLAGS and CFLAGS not preserving order, bug1130. [Olof Kindgren]

****  Fix internal error on initializing parameter array, bug1131. [Jie Xu]

****  Fix internal error on interface arrays, bug1135. [John Stevenson]

****  Fix calling sformatf to display, and elab $displays, bug1139. [Johan Bjork]

****  Fix realpath compile issue on MSVC++, bug1141. [Miodrag Milanovic]

****  Fix missing error on interface size mismatch, bug1143.  [Johan Bjork]

****  Fix error on parameters with dotted references, bug1146. [Johan Bjork]

****  Fix wreal not handling continuous assign, bug1150. [J Briquet]

****  Fix nested structure parameter selects, bug1150. [J Briquet]


* Verilator 3.900 2017-01-15

**    Internal code changes for improved compatibility and performance.

***   Support old-style $display($time), bug467. [John Demme]

****  With --bbox-unsup, suppress desassign and mixed edges, bug1120. [Galen Seitz]

****  Fix parsing sensitivity with &&, bug934. [Luke Yang]

****  Fix internal error on double-for loop unrolling, bug1044. [Jan Egil Ruud]

****  Fix internal error on unique casez with --assert, bug1117. [Enzo Chi]
